Fixed spacing issues
Fixed issues for mobile

--- a/src/components/UpcomingEvents/style.module.css
+++ b/src/components/UpcomingEvents/style.module.css
@@ -1,5 +1,9 @@
 .event_page {
-    
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .events {
@@ -57,5 +61,184 @@
     margin: 20px 20px 10px 0px;
     color: blue;
     text-decoration: underline;
+  }
+  
+  @media (max-width: 768px) {
+    .events {
+        width: 300px;
+        margin: 20px;
+        font-family: Arial, sans-serif;
+        text-align: left;
+      }
+      
+      .event_card {
+        display: flex;
+        align-items: center;
+        margin: 10px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        background-color: #f9f9f9;
+        max-width: fit-content;
+        
+      }
+      
+      .event_image {
+        width: 9.563rem;
+        height: 9.449rem;
+        background-color: #e0e0e0;
+        margin-right: 20px;
+        border-radius: 10px;
+      }
+      
+      .event_details {
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+      }
+      
+      .event_details h3 {
+        margin: 0;
+        font-size: 1.2em;
+      }
+      
+      .event_details p {
+        margin: 5px 0;
+        color: #666;
+        font-size: 0.9em;
+      }
+      
+      .event_details span {
+        color: #4252CC;
+        font-size: 0.8em;
+        margin-top: auto;
+      }
+    
+      .more_events {
+        text-align: right;
+        margin: 20px 20px 10px 0px;
+        color: blue;
+        text-decoration: underline;
+      }
+  }
+
+  @media (max-width: 480px) {
+    .events {
+        width: 300px;
+        margin: 20px;
+        font-family: Arial, sans-serif;
+        text-align: left;
+      }
+      
+      .event_card {
+        display: flex;
+        align-items: center;
+        margin: 10px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        background-color: #f9f9f9;
+        max-width: fit-content;
+        
+      }
+      
+      .event_image {
+        width: 9.563rem;
+        height: 9.449rem;
+        background-color: #e0e0e0;
+        margin-right: 20px;
+        border-radius: 10px;
+      }
+      
+      .event_details {
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+      }
+      
+      .event_details h3 {
+        margin: 0;
+        font-size: 1.2em;
+      }
+      
+      .event_details p {
+        margin: 5px 0;
+        color: #666;
+        font-size: 0.9em;
+      }
+      
+      .event_details span {
+        color: #4252CC;
+        font-size: 0.8em;
+        margin-top: auto;
+      }
+    
+      .more_events {
+        text-align: right;
+        margin: 20px 20px 10px 0px;
+        color: blue;
+        text-decoration: underline;
+      }
+  }
+
+  @media (max-width: 978px) {
+    .events {
+        width: 300px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        margin-right: 20%;
+        font-family: Arial, sans-serif;
+        text-align: left;
+      }
+      
+      .event_card {
+        display: flex;
+        align-items: center;
+        margin: 10px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        background-color: #f9f9f9;
+        max-width: fit-content;
+        
+      }
+      
+      .event_image {
+        width: 9.563rem;
+        height: 9.449rem;
+        background-color: #e0e0e0;
+        margin-right: 20px;
+        border-radius: 10px;
+      }
+      
+      .event_details {
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+      }
+      
+      .event_details h3 {
+        margin: 0;
+        font-size: 1.2em;
+      }
+      
+      .event_details p {
+        margin: 5px 0;
+        color: #666;
+        font-size: 0.9em;
+      }
+      
+      .event_details span {
+        color: #4252CC;
+        font-size: 0.8em;
+        margin-top: auto;
+      }
+    
+      .more_events {
+        text-align: right;
+        margin: 20px 20px 10px 0px;
+        color: blue;
+        text-decoration: underline;
+      }
   }
   
